target/generated-sources/antlr4/nl/han/ica/icss/parser/ICSSParser.java
// Generated from nl\han\ica\icss\parser\ICSS.g4 by ANTLR 4.7
package nl.han.ica.icss.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ICSSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, STYLERULE_OPEN=2, STYLERULE_CLOSE=3, ENDLINE=4, COLOR_ATT=5, 
		BG_COL_ATT=6, WIDTH_ATT=7, HEIGTH_ATT=8, ATTRIBUTE_SEPARATOR=9, COLOR_LITERAL=10, 
		PIXEL_LITERAL=11, PERCENTAGE_LITERAL=12, SCALAR_LITERAL=13, SWITCH_KEYWORD=14, 
		SWITCH_OPEN=15, SWITCH_CLOSE=16, CASE_KEYWORD=17, DEFAULT_KEYWORD=18, 
		CONSTANT_DECLARATOR=19, CONSTANT_NAME=20, CONSTANT_ASSIGNMENT_SEPERATOR=21, 
		SELECTOR_ID=22, SELECTOR_CLASS=23, SELECTOR_ELEMENT=24, ADD_OPP=25, SUBSTRACT_OPP=26, 
		MULTIPLY_OPP=27, NUMBER=28, LETTER=29;
	public static final int
		RULE_stylesheet = 0, RULE_stylesheetpart = 1, RULE_stylerule = 2, RULE_selector = 3, 
		RULE_declarationpart = 4, RULE_declaration = 5, RULE_attribute = 6, RULE_value = 7, 
		RULE_sum = 8, RULE_subtraction = 9, RULE_multiply = 10, RULE_realvalue = 11, 
		RULE_literal = 12, RULE_constantassignment = 13, RULE_constantreference = 14, 
		RULE_switchrule = 15, RULE_switchvaluecase = 16;
	public static final String[] ruleNames = {
		"stylesheet", "stylesheetpart", "stylerule", "selector", "declarationpart", 
		"declaration", "attribute", "value", "sum", "subtraction", "multiply", 
		"realvalue", "literal", "constantassignment", "constantreference", "switchrule", 
		"switchvaluecase"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'{'", "'}'", "';'", "'color'", "'background-color'", "'width'", 
		"'height'", "':'", null, null, null, null, "'switch'", "'('", "')'", "'case'", 
		"'default'", "'let'", null, "'is'", null, null, null, "'+'", "'-'", "'*'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACE", "STYLERULE_OPEN", "STYLERULE_CLOSE", "ENDLINE", "COLOR_ATT", 
		"BG_COL_ATT", "WIDTH_ATT", "HEIGTH_ATT", "ATTRIBUTE_SEPARATOR", "COLOR_LITERAL", 
		"PIXEL_LITERAL", "PERCENTAGE_LITERAL", "SCALAR_LITERAL", "SWITCH_KEYWORD", 
		"SWITCH_OPEN", "SWITCH_CLOSE", "CASE_KEYWORD", "DEFAULT_KEYWORD", "CONSTANT_DECLARATOR", 
		"CONSTANT_NAME", "CONSTANT_ASSIGNMENT_SEPERATOR", "SELECTOR_ID", "SELECTOR_CLASS", 
		"SELECTOR_ELEMENT", "ADD_OPP", "SUBSTRACT_OPP", "MULTIPLY_OPP", "NUMBER", 
		"LETTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ICSS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ICSSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StylesheetContext extends ParserRuleContext {
		public List<StylesheetpartContext> stylesheetpart() {
			return getRuleContexts(StylesheetpartContext.class);
		}
		public StylesheetpartContext stylesheetpart(int i) {
			return getRuleContext(StylesheetpartContext.class,i);
		}
		public StylesheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterStylesheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitStylesheet(this);
		}
	}

	public final StylesheetContext stylesheet() throws RecognitionException {
		StylesheetContext _localctx = new StylesheetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stylesheet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTANT_DECLARATOR) | (1L << SELECTOR_ID) | (1L << SELECTOR_CLASS) | (1L << SELECTOR_ELEMENT))) != 0)) {
				{
				{
				setState(34);
				stylesheetpart();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StylesheetpartContext extends ParserRuleContext {
		public StyleruleContext stylerule() {
			return getRuleContext(StyleruleContext.class,0);
		}
		public ConstantassignmentContext constantassignment() {
			return getRuleContext(ConstantassignmentContext.class,0);
		}
		public SwitchruleContext switchrule() {
			return getRuleContext(SwitchruleContext.class,0);
		}
		public StylesheetpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesheetpart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterStylesheetpart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitStylesheetpart(this);
		}
	}

	public final StylesheetpartContext stylesheetpart() throws RecognitionException {
		StylesheetpartContext _localctx = new StylesheetpartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stylesheetpart);
		try {
			setState(43);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				stylerule();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				constantassignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				switchrule();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StyleruleContext extends ParserRuleContext {
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public TerminalNode STYLERULE_OPEN() { return getToken(ICSSParser.STYLERULE_OPEN, 0); }
		public TerminalNode STYLERULE_CLOSE() { return getToken(ICSSParser.STYLERULE_CLOSE, 0); }
		public List<DeclarationpartContext> declarationpart() {
			return getRuleContexts(DeclarationpartContext.class);
		}
		public DeclarationpartContext declarationpart(int i) {
			return getRuleContext(DeclarationpartContext.class,i);
		}
		public StyleruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylerule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterStylerule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitStylerule(this);
		}
	}

	public final StyleruleContext stylerule() throws RecognitionException {
		StyleruleContext _localctx = new StyleruleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stylerule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			selector();
			setState(46);
			match(STYLERULE_OPEN);
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COLOR_ATT) | (1L << BG_COL_ATT) | (1L << WIDTH_ATT) | (1L << HEIGTH_ATT))) != 0)) {
				{
				{
				setState(47);
				declarationpart();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			match(STYLERULE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectorContext extends ParserRuleContext {
		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selector; }
	 
		public SelectorContext() { }
		public void copyFrom(SelectorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ClassselectorContext extends SelectorContext {
		public TerminalNode SELECTOR_CLASS() { return getToken(ICSSParser.SELECTOR_CLASS, 0); }
		public ClassselectorContext(SelectorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterClassselector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitClassselector(this);
		}
	}
	public static class ElementselectorContext extends SelectorContext {
		public TerminalNode SELECTOR_ELEMENT() { return getToken(ICSSParser.SELECTOR_ELEMENT, 0); }
		public ElementselectorContext(SelectorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterElementselector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitElementselector(this);
		}
	}
	public static class IdselectorContext extends SelectorContext {
		public TerminalNode SELECTOR_ID() { return getToken(ICSSParser.SELECTOR_ID, 0); }
		public IdselectorContext(SelectorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterIdselector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitIdselector(this);
		}
	}

	public final SelectorContext selector() throws RecognitionException {
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selector);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECTOR_ELEMENT:
				_localctx = new ElementselectorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				match(SELECTOR_ELEMENT);
				}
				break;
			case SELECTOR_ID:
				_localctx = new IdselectorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(SELECTOR_ID);
				}
				break;
			case SELECTOR_CLASS:
				_localctx = new ClassselectorContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				match(SELECTOR_CLASS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationpartContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationpart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterDeclarationpart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitDeclarationpart(this);
		}
	}

	public final DeclarationpartContext declarationpart() throws RecognitionException {
		DeclarationpartContext _localctx = new DeclarationpartContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarationpart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public TerminalNode ATTRIBUTE_SEPARATOR() { return getToken(ICSSParser.ATTRIBUTE_SEPARATOR, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode ENDLINE() { return getToken(ICSSParser.ENDLINE, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			attribute();
			setState(63);
			match(ATTRIBUTE_SEPARATOR);
			setState(64);
			value();
			setState(65);
			match(ENDLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode COLOR_ATT() { return getToken(ICSSParser.COLOR_ATT, 0); }
		public TerminalNode BG_COL_ATT() { return getToken(ICSSParser.BG_COL_ATT, 0); }
		public TerminalNode WIDTH_ATT() { return getToken(ICSSParser.WIDTH_ATT, 0); }
		public TerminalNode HEIGTH_ATT() { return getToken(ICSSParser.HEIGTH_ATT, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COLOR_ATT) | (1L << BG_COL_ATT) | (1L << WIDTH_ATT) | (1L << HEIGTH_ATT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public RealvalueContext realvalue() {
			return getRuleContext(RealvalueContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_value);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				realvalue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				sum();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SumContext extends ParserRuleContext {
		public List<RealvalueContext> realvalue() {
			return getRuleContexts(RealvalueContext.class);
		}
		public RealvalueContext realvalue(int i) {
			return getRuleContext(RealvalueContext.class,i);
		}
		public TerminalNode ADD_OPP() { return getToken(ICSSParser.ADD_OPP, 0); }
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public SubtractionContext subtraction() {
			return getRuleContext(SubtractionContext.class,0);
		}
		public MultiplyContext multiply() {
			return getRuleContext(MultiplyContext.class,0);
		}
		public SumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterSum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitSum(this);
		}
	}

	public final SumContext sum() throws RecognitionException {
		SumContext _localctx = new SumContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sum);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				realvalue();
				setState(74);
				match(ADD_OPP);
				setState(75);
				realvalue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				realvalue();
				setState(78);
				match(ADD_OPP);
				setState(82);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(79);
					sum();
					}
					break;
				case 2:
					{
					setState(80);
					subtraction();
					}
					break;
				case 3:
					{
					setState(81);
					multiply();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubtractionContext extends ParserRuleContext {
		public List<RealvalueContext> realvalue() {
			return getRuleContexts(RealvalueContext.class);
		}
		public RealvalueContext realvalue(int i) {
			return getRuleContext(RealvalueContext.class,i);
		}
		public TerminalNode SUBSTRACT_OPP() { return getToken(ICSSParser.SUBSTRACT_OPP, 0); }
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public SubtractionContext subtraction() {
			return getRuleContext(SubtractionContext.class,0);
		}
		public MultiplyContext multiply() {
			return getRuleContext(MultiplyContext.class,0);
		}
		public SubtractionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subtraction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterSubtraction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitSubtraction(this);
		}
	}

	public final SubtractionContext subtraction() throws RecognitionException {
		SubtractionContext _localctx = new SubtractionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subtraction);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				realvalue();
				setState(87);
				match(SUBSTRACT_OPP);
				setState(88);
				realvalue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				realvalue();
				setState(91);
				match(SUBSTRACT_OPP);
				setState(95);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(92);
					sum();
					}
					break;
				case 2:
					{
					setState(93);
					subtraction();
					}
					break;
				case 3:
					{
					setState(94);
					multiply();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplyContext extends ParserRuleContext {
		public List<RealvalueContext> realvalue() {
			return getRuleContexts(RealvalueContext.class);
		}
		public RealvalueContext realvalue(int i) {
			return getRuleContext(RealvalueContext.class,i);
		}
		public TerminalNode MULTIPLY_OPP() { return getToken(ICSSParser.MULTIPLY_OPP, 0); }
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public SubtractionContext subtraction() {
			return getRuleContext(SubtractionContext.class,0);
		}
		public MultiplyContext multiply() {
			return getRuleContext(MultiplyContext.class,0);
		}
		public MultiplyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiply; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterMultiply(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitMultiply(this);
		}
	}

	public final MultiplyContext multiply() throws RecognitionException {
		MultiplyContext _localctx = new MultiplyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_multiply);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				realvalue();
				setState(100);
				match(MULTIPLY_OPP);
				setState(101);
				realvalue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				realvalue();
				setState(104);
				match(MULTIPLY_OPP);
				setState(108);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(105);
					sum();
					}
					break;
				case 2:
					{
					setState(106);
					subtraction();
					}
					break;
				case 3:
					{
					setState(107);
					multiply();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RealvalueContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ConstantreferenceContext constantreference() {
			return getRuleContext(ConstantreferenceContext.class,0);
		}
		public RealvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterRealvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitRealvalue(this);
		}
	}

	public final RealvalueContext realvalue() throws RecognitionException {
		RealvalueContext _localctx = new RealvalueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_realvalue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLOR_LITERAL:
			case PIXEL_LITERAL:
			case PERCENTAGE_LITERAL:
			case SCALAR_LITERAL:
				{
				setState(112);
				literal();
				}
				break;
			case CONSTANT_NAME:
				{
				setState(113);
				constantreference();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
